// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<bolt-video> Component <bolt-video> compiles 1`] = `

<bolt-ratio ratio="16/9">
  <replace-with-children class="c-bolt-ratio"
                         style="padding-bottom: calc((9 / 16) * 100%); --aspect-ratio: 1.7777777777778;"
  >
    <bolt-video class="js-bolt-video-uuid--12345"
                video-id="3861325118001"
                player-id="r1CAdLzTW"
                account-id="1900410236"
                video-uuid="js-bolt-video-uuid--12345"
    >
    </bolt-video>
  </replace-with-children>
</bolt-ratio>

`;

exports[`<bolt-video> Component <bolt-video> compiles with a different \`video-id\` 1`] = `

<bolt-ratio ratio="16/9">
  <replace-with-children class="c-bolt-ratio"
                         style="padding-bottom: calc((9 / 16) * 100%); --aspect-ratio: 1.7777777777778;"
  >
    <bolt-video class="js-bolt-video-uuid--12345"
                video-id="5609376179001"
                player-id="r1CAdLzTW"
                account-id="1900410236"
                video-uuid="js-bolt-video-uuid--12345"
    >
    </bolt-video>
  </replace-with-children>
</bolt-ratio>

`;

exports[`<bolt-video> Component <bolt-video> compiles with a meta description + meta title 1`] = `

<bolt-ratio ratio="16/9">
  <replace-with-children class="c-bolt-ratio"
                         style="padding-bottom: calc((9 / 16) * 100%); --aspect-ratio: 1.7777777777778;"
  >
    <bolt-video class="js-bolt-video-uuid--12345"
                video-id="3861325118001"
                player-id="r1CAdLzTW"
                account-id="1900410236"
                video-uuid="js-bolt-video-uuid--12345"
    >
    </bolt-video>
  </replace-with-children>
</bolt-ratio>

`;

exports[`<bolt-video> Component <bolt-video> compiles with a meta description 1`] = `

<bolt-ratio ratio="16/9">
  <replace-with-children class="c-bolt-ratio"
                         style="padding-bottom: calc((9 / 16) * 100%); --aspect-ratio: 1.7777777777778;"
  >
    <bolt-video class="js-bolt-video-uuid--12345"
                video-id="3861325118001"
                player-id="r1CAdLzTW"
                account-id="1900410236"
                video-uuid="js-bolt-video-uuid--12345"
    >
    </bolt-video>
  </replace-with-children>
</bolt-ratio>

`;
